added footer for mobile view + created directory for pictures

--- a/home.css
+++ b/home.css
@@ -11,6 +11,15 @@ body {
   font-family: 'lobster', cursive;
 }
 
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
 main {
   margin-bottom: 4rem;
 }
@@ -51,8 +60,6 @@ main .landing header nav .rightSide .search {
 }
 
 main .landing header nav .rightSide a {
-  text-decoration: none;
-  color: #fff;
   position: relative;
   top: 0.3rem;
   margin: 0 1rem;
@@ -84,7 +91,7 @@ main .landing .present {
 
 main .landing .present .left h1 {
   font-size: 3rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
   padding-left: 1rem;
   font-weight: lighter;
@@ -134,13 +141,13 @@ main .illustration {
 main .illustration .redText {
   padding-top: 3rem;
   background-color: #d33c2a;
-  height: 150px;
+  height: 170px;
 }
 
 main .illustration .redText h1 {
   background-color: #f5edec;
   width: 90%;
-  margin: 0 auto;
+  margin: 1rem auto;
   height: 110px;
   color: #d33c2a;
   border-top-left-radius: 1rem;
@@ -156,7 +163,10 @@ main .illustration img {
 }
 
 .nyheter h1 {
-  margin: 3rem 2rem;
+  margin-top: -1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 3rem;
   font-size: 2rem;
 }
 
@@ -202,10 +212,14 @@ main .illustration img {
   background-color: #d33c2a;
   color: #fff;
   border: none;
-  margin: 1rem;
+  margin: 2rem;
   border-radius: 0.3rem;
   font-size: 1.1rem;
   padding: 1rem;
+}
+
+.calendar {
+  margin-top: 3rem;
 }
 
 .calendar .calendarItems li {
@@ -243,6 +257,8 @@ main .illustration img {
 footer {
   margin-top: 5rem;
   background-color: #d33c2a;
+  color: #fff;
+  padding-bottom: 1rem;
 }
 
 footer .footerHeader img {
@@ -255,7 +271,33 @@ footer .footerHeader h1 {
   position: relative;
   top: -3.25rem;
   left: 4rem;
-  color: #fff;
   font-size: 2rem;
+}
+
+footer .footerTop {
+  margin-top: -3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .footerTop ul {
+  padding: .5rem;
+}
+
+footer .footerTop ul li {
+  margin: .5rem;
+}
+
+footer .footerIcon {
+  text-align: center;
+}
+
+footer .footerIcon i {
+  font-size: 1.3rem;
+  margin: .5rem;
 }
 /*# sourceMappingURL=home.css.map */
