--- a/sass/home.css
+++ b/sass/home.css
@@ -4,6 +4,7 @@ main .landing .present .left .title, .nyheter .title {
   margin-right: 2rem;
   margin-bottom: 3rem;
   color: #2f2e41;
+  font-weight: lighter;
   font-size: 2rem;
 }
 
@@ -12,6 +13,12 @@ main .landing .present .left .title hr, .nyheter .title hr {
   position: relative;
   top: -0.65rem;
   left: 10.3rem;
+}
+
+@media (min-width: 600px) and (max-width: 959px) {
+  main .landing .present .left .title hr, .nyheter .title hr {
+    width: 75%;
+  }
 }
 
 main .illustration img, .nyheter .newsList li img, .calendar .calendarItems li img {
@@ -28,6 +35,12 @@ main .illustration img, .nyheter .newsList li img, .calendar .calendarItems li i
   list-style: none;
   border-radius: 0.3rem;
   padding: 1rem 2rem;
+}
+
+@media (min-width: 600px) and (max-width: 959px) {
+  .nyheter .newsList li, .calendar .calendarItems li {
+    width: 80%;
+  }
 }
 
 .nyheter .btnHolder {
@@ -95,7 +108,7 @@ main .landing header nav .rightSide {
   margin-right: 0.5rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .landing header nav .rightSide {
     margin-top: 1rem;
   }
@@ -109,7 +122,7 @@ main .landing header nav .rightSide .search {
   padding-left: 1rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .landing header nav .rightSide .search {
     width: 250px;
     height: 30px;
@@ -148,20 +161,39 @@ main .landing .present {
 
 main .landing .present .left .title {
   margin: 1rem;
+  margin-bottom: 0.5rem;
   color: #fff;
+  font-size: 3.5rem;
+}
+
+main .landing .present .left .title hr {
+  width: 35%;
+  position: relative;
+  top: -1rem;
+  left: 17.3rem;
+}
+
+@media (min-width: 600px) and (max-width: 959px) {
+  main .landing .present .left .title hr {
+    width: 65%;
+    padding-right: 3rem;
+  }
 }
 
 main .landing .present .left p {
-  margin: 1rem 0;
+  margin-top: 1rem;
   font-size: 1.1rem;
-  padding-right: 5rem;
-  padding-left: 1rem;
+  padding-right: 2rem;
+  padding-left: 5rem;
+  text-align: right;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .landing .present .left p {
-    font-size: 1.5rem;
-    padding-right: 9rem;
+    margin: 0 auto;
+    font-size: 1.3rem;
+    padding-left: 11rem;
+    margin-top: 2rem;
   }
 }
 
@@ -172,8 +204,7 @@ main .landing .present .left .iconList {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 3rem;
-  padding: 0 0.1rem;
+  margin-top: 4rem;
 }
 
 main .landing .present .left .iconList li {
@@ -183,7 +214,7 @@ main .landing .present .left .iconList li {
   margin: 0.3rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .landing .present .left .iconList li {
     font-size: 1rem;
   }
@@ -194,7 +225,7 @@ main .landing .present .left .iconList li i {
   font-size: 1.4rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .landing .present .left .iconList li i {
     font-size: 2rem;
   }
@@ -212,17 +243,18 @@ main .illustration .redText {
 
 main .illustration .redText h1 {
   background-color: #f5edec;
-  width: 90%;
+  width: 85%;
   margin: 1rem auto;
   height: 106px;
   color: #d33c2a;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   padding: 1rem;
+  padding-top: 2rem;
   font-size: 1.8rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   main .illustration .redText h1 {
     font-size: 2.3rem;
     padding: 1.5rem;
@@ -231,9 +263,10 @@ main .illustration .redText h1 {
 
 main .illustration img {
   height: 32vh;
+  width: 500px;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   .nyheter .newsList {
     display: -ms-grid;
     display: grid;
@@ -256,7 +289,7 @@ main .illustration img {
   margin-top: 3rem;
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 600px) and (max-width: 959px) {
   .calendar .calendarItems {
     display: -ms-grid;
     display: grid;
@@ -285,7 +318,7 @@ footer {
   margin-top: 5rem;
   background-color: #d33c2a;
   color: #fff;
-  padding-bottom: 1rem;
+  padding: 1rem;
 }
 
 footer .footerHeader .logo {
